--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -120,4 +120,13 @@
         android:layout_toRightOf="@+id/button_inject_screentime"
         android:layout_alignBottom="@+id/button_inject_screentime"
         android:text="jni_uuid" />
+
+     <Button
+         android:id="@+id/button_svc_version"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_alignParentLeft="true"
+         android:layout_centerVertical="true"
+         android:text="service_version" />
+
 </RelativeLayout>
